--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -1,7 +1,7 @@
 \section{Related Work}
 
 %\subsection{Optical Flow}
-\paragraph{Optical Flow}
+\paragraph{Optical Flow.}
 
 has been a fundamental computer vision technique for decades, as it estimates dense correspondences between two input images \cite{BakerSLRBS2011,MenzeHG2018}.
 These correspondences can be used to identify object or camera ego-motion, and optical flow thus finds many applications in robotics, scene understanding, geometry reconstruction etc.
