--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -104,6 +104,7 @@ Our experiments demonstrate the benefits of our proposed method both quantitativ
 
 \bibliography{360flow} % egbib
 
-\input{sections/supplementary}
+%% CR: we shouldn't submit this ->
+%\input{sections/supplementary}
 
 \end{document}
