--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -9,7 +9,7 @@ To evaluate the accuracy of 360° optical flow regardless projection, and to acc
 %The method implemented in Python takes 20 seconds to estimate optical flow from a $1280 pixels\times640 pixels$ resolution image pairs.
 %Our Python implementation uses DIS flow \cite{KroegTDV2016} for computing the tangent optical flow fields.
 %Computing optical flow at 1280$\times$640 resolution takes about 20 seconds.
-Our Python implementation computes 360° optical flow at 1280$\times$640 resolution in about 20 seconds.
+Our single-threaded Python implementation computes 360° optical flow at 1280$\times$640 resolution in about 20 seconds.
 We use DIS flow \cite{KroegTDV2016} for the tangent flow fields.
 \looseness-1
 
