--- a/doc/paper_draft/360flow.bib
+++ b/doc/paper_draft/360flow.bib
@@ -208,7 +208,7 @@
 }
 
 @InProceedings{BlackA1991,
-  author      = {M. J. Black and P. Anandan},
+  author      = {Michael J. Black and P. Anandan},
   title       = {Robust dynamic motion estimation over time},
   booktitle   = CVPR,
   year        = {1991},
@@ -422,8 +422,8 @@ We propose a novel training objective that enables our convolutional neural netw
 }
 
 @InProceedings{HannuWH2019,
-  author    = {Hannuksela, Miska M. and Wang, Ye-Kui and Hourunranta, Ari},
-  title     = {An Overview of the OMAF Standard for 360° Video},
+  author    = {Miska M. Hannuksela and Ye-Kui Wang and Ari Hourunranta},
+  title     = {An Overview of the {OMAF} Standard for 360° Video},
   booktitle = {Data Compression Conference (DCC)},
   year      = {2019},
   pages     = {418--427},
@@ -711,6 +711,18 @@ We propose a novel training objective that enables our convolutional neural netw
   doi       = {10.1109/ICCV.2019.00943},
   _issn      = {1550-5499},
   _url       = {http://openaccess.thecvf.com/content_ICCV_2019/html/Savva_Habitat_A_Platform_for_Embodied_AI_Research_ICCV_2019_paper.html},
+}
+
+@InProceedings{ShugrLKLSSF2019,
+  author    = {Maria Shugrina and Ziheng Liang and Amlan Kar and Jiaman Li and Angad Singh and Karan Singh and Sanja Fidler},
+  title     = {Creative Flow+ Dataset},
+  booktitle = CVPR,
+  year      = {2019},
+  pages     = {5384--5393},
+  _month     = jun,
+  abstract  = {We present the Creative Flow+ Dataset, the first diverse multi-style artistic video dataset richly labeled with per-pixel optical flow, occlusions, correspondences, segmentation labels, normals, and depth. Our dataset includes 3000 animated sequences rendered using styles randomly selected from 40 textured line styles and 38 shading styles, spanning the range between flat cartoon fill and wildly sketchy shading. Our dataset includes 124K+ train set frames and 10K test set frames rendered at 1500x1500 resolution, far surpassing the largest available optical flow datasets in size. While modern techniques for tasks such as optical flow estimation achieve impressive performance on realistic images and video, today there is no way to gauge their performance on non-photorealistic images. Creative Flow+ poses a new challenge to generalize real-world Computer Vision to messy stylized content. We show that learning-based optical flow methods fail to generalize to this data and struggle to compete with classical approaches, and invite new research in this area.  Our dataset and a new optical flow benchmark will be publicly available at: www.cs.toronto.edu/creativeflow/. We further release the complete dataset creation pipeline, allowing the community to generate and stylize their own data on demand.},
+  doi       = {10.1109/CVPR.2019.00553},
+  _url       = {https://openaccess.thecvf.com/content_CVPR_2019/html/Shugrina_Creative_Flow_Dataset_CVPR_2019_paper.html},
 }
 
 @Unpublished{StrauWMCWGEMRVCYBYPYZLCBGMPSBSNGLN2019,
@@ -1073,14 +1085,6 @@ We propose a novel training objective that enables our convolutional neural netw
   abstract  = {Recent work on depth estimation up to now has only focused on projective images ignoring 360 content which is now increasingly and more easily produced. We show that monocular depth estimation models trained on traditional images produce sub-optimal results on omnidirectional images, showcasing the need for training directly on 360 datasets, which however, are hard to acquire. In this work, we circumvent the challenges associated with acquiring high quality 360 datasets with ground truth depth annotations, by re-using recently released large scale 3D datasets and re-purposing them to 360 via rendering. This dataset, which is considerably larger than similar projective datasets, is publicly offered to the community to enable future research in this direction. We use this dataset to learn in an end-to-end fashion the task of depth estimation from 360 images. We show promising results in our synthesized data as well as in unseen realistic images.},
   doi       = {10.1007/978-3-030-01231-1_28},
   _url       = {http://openaccess.thecvf.com/content_ECCV_2018/html/NIKOLAOS_ZIOULIS_OmniDepth_Dense_Depth_ECCV_2018_paper.html},
-}
-
-@inproceedings{shugrina2019creative,
-	title={Creative flow+ dataset},
-	author={Shugrina, Maria and Liang, Ziheng and Kar, Amlan and Li, Jiaman and Singh, Angad and Singh, Karan and Fidler, Sanja},
-	booktitle= CVPR,
-	pages={5384--5393},
-	year={2019}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
