--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -35,7 +35,7 @@ there is no feasible hardware for capturing high-quality optical flow from a rea
 %
 For quantitative evaluation of optical flow, ground truth is necessary.
 %
-Inspired by \citet{shugrina2019creative}, we render ground-truth 360° images and optical flow from the reconstructed 3D mesh of a read-world scene.
+Inspired by \citet{ShugrLKLSSF2019}, we render ground-truth 360° images and optical flow from the reconstructed 3D mesh of a read-world scene.
 %% select the 3d mesh dataset
 The ground-truth data is rendered using the Replica dataset \cite{StrauWMCWGEMRVCYBYPYZLCBGMPSBSNGLN2019}, which not only contains high-quality HDR textures and 3D meshes, but also public code for a versatile renderer.
 %
