Preparation for submission

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -2,8 +2,8 @@
 
 %% Faster LaTeX compilation time, bigger file.
 %% TODO: Comment out for submission/final version.
-\pdfcompresslevel=0
-\pdfobjcompresslevel=0
+%\pdfcompresslevel=0
+%\pdfobjcompresslevel=0
 
 %% Enter your paper number here for the review copy
 \bmvcreviewcopy{298}
@@ -41,14 +41,14 @@
 %\def\etal{\emph{et al}\bmvaOneDot}
 
 \usepackage{xcolor}
-\definecolor{skyblue}{rgb}{0.2,0.6,0.9}
-\newcommand{\placeholder}[1]{\textcolor{skyblue}{\rule{\linewidth}{#1}}}
-\newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
-\newcommand\todolist[1]{\textcolor{red}{#1}}
-\newcommand{\IGNORE}[1]{}
-\newcommand{\new}[1]{\textcolor{orange}{#1}}
-\newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
-\newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
+%\definecolor{skyblue}{rgb}{0.2,0.6,0.9}
+%\newcommand{\placeholder}[1]{\textcolor{skyblue}{\rule{\linewidth}{#1}}}
+%\newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
+%\newcommand\todolist[1]{\textcolor{red}{#1}}
+%\newcommand{\IGNORE}[1]{}
+%\newcommand{\new}[1]{\textcolor{orange}{#1}}
+%\newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
+%\newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
 
 \usepackage{microtype}
 %\usepackage{amsfonts}
